# telegram-gitfbot

./: .env-example  .pre-commit-config.yaml  hotreload.sh  pyproject.toml  readme.md  requirements.txt  start.sh
bot/: __main__.py  constants.py  video_data.py
